presentation-server/kube/base/presentation-server.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: presentation-server
spec:
  selector:
    app: presentation-server
  ports:
  - name: grpc
    port: 50000
    targetPort: grpc
  - name: grpc-web
    port: 50002
    targetPort: grpc-web
