presentation-server/kube/base/redis.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: presentation-server
    component: redis
  ports:
  - port: 6379
    targetPort: 6379
