presentation-server/kube/base/presentation-server.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
  name: presentation-server
spec:
  rules:
  - host: api.v2tools.com
    http:
      paths:
      - backend:
          serviceName: presentation-server
          servicePort: grpc-web
        path: /presentation/
  tls:
  - hosts:
    - api.v2tools.com
    secretName: ingress-nginx/star-v2tools
